[package]
name = "grades_list"
version = "0.1.0"
authors = ["simplyme <heyitssimplyme@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "^0.10", features = ["cookies"] }
scraper = "*"
tokio = { version = "0.2", features = ["full"] }
prettytable-rs = "^0.8"
structopt = "0.2"
